--- a/style.css
+++ b/style.css
@@ -12,14 +12,22 @@
 
 html,body{height:100%;}
 body {
-        margin: 0;
-        font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: radial-gradient(1200px 600px at 10% 10%, rgba(122,47,245,0.14), transparent),
-                                radial-gradient(900px 500px at 90% 90%, rgba(255,92,156,0.12), transparent),
-                                linear-gradient(180deg,var(--bg-1), var(--bg-2));
-        color: #eaeaf3;
-        -webkit-font-smoothing:antialiased;
-        -moz-osx-font-smoothing:grayscale;
+    margin: 0;
+    font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background:
+        radial-gradient(1200px 600px at 10% 10%, rgba(122,47,245,0.14), transparent),
+        radial-gradient(900px 500px at 90% 90%, rgba(255,92,156,0.12), transparent),
+        linear-gradient(180deg,
+            var(--bg-1) 0%,
+            rgba(210,206,219,0.9) 25%,
+            rgba(33,6,63,0.9) 70%,
+            var(--bg-2) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    color: #eaeaf3;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
 }
 
 .container {
@@ -33,7 +41,7 @@ header.site-header {
     justify-content: space-between;
     align-items: center;
     padding: 1.25rem 1rem;
-    background: linear-gradient(135deg, rgba(103, 45, 197, 0.45), rgba(26, 0, 48, 0.25));
+    background: linear-gradient(135deg, rgba(56, 29, 99, 0.45)), rgba(26, 0, 48, 0.25));
     box-shadow: 0 10px 30px rgba(0,0,0,0.6), inset 0 -2px 40px rgba(255,255,255,0.02);
     color: white;
     border-radius: 10px;
